--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h1 class="centeredtext">Recognise these?</h1>
 
         <h3>Of course you do. What you didn't know however is that the all the data on your devices are at <strong>risk</strong>, and this is why...</h3>
-        <img src="images/sending.png">
+        <img id="sending" src="images/sending2.png">
         <img id="invertedImage" src="images/sent.png">
         <a class="button" id="revealNext">Send</a>
 
